$Id: History,v 1.34 2002-04-25 20:21:13 asaim Exp $
-------------------------------------------------------------------

     =========================================================
     Geant4 - an Object-Oriented Toolkit for Simulation in HEP
     =========================================================

                      Category History file
                      ---------------------
This file should be used by G4 developers and category coordinators
to briefly summarize all major modifications introduced in the code
and keep track of all category-tags.
It DOES NOT substitute the  CVS log-message one should put at every
committal in the CVS repository !

     ----------------------------------------------------------
     * Reverse chronological order (last date on top), please *
     ----------------------------------------------------------

Apr 25, 02 M.Asai (tracking-V04-00-05)
- G4TrackingManager.cc
  o Implement EventAborted() method

Feb 07. 02 T.Sasaki (tracking-V04-00-04)
- G4SteppingManager.cc
  o Withdrawal of the fix in tracking-V04-00-02

Feb 04, 02 G.Cosmo (tracking-V04-00-03)
- G4SteppingManager.hh
  o moved 'SizeOfSelectedDoItVector' to global scope again, to allow porting on
    WIN-VC compiler. As private member, the following error is reported:
    - illegal pure syntax, must be '= 0' -
    - 'SizeOfSelectedDoItVector' : pure specifier can only be specified for functions -

Feb 03, 02 T.Sasaki and H.Kurashige
- G4SteppingManager2.cc
  o fix for extra steps when the ApplyCuts flag is set

Jan 23, 02 T.Sasaki(tracking-V04-00-02)
- G4SteppingManager.cc
  o safe comparison between floating numbers (0.0->DBL_MIN)

Jan 22, 02 M.Asai (tracking-V04-00-01)
- G4SteppingManager.cc
  o Issue G4Exception if a primary track starts outside of the world.

Jan 21, 02 T.Sasaki (tracking-V04-00-00)
- G4SteppingManager[.hh.cc]:
  o Fixed a bug for particles below threshold. Avoid double steps.