@@ -1,4 +1,4 @@
-$Id: History,v 1.34 2002-04-25 20:21:13 asaim Exp $
+$Id: History,v 1.35 2002-08-13 18:14:42 asaim Exp $
 -------------------------------------------------------------------
 
      =========================================================
@@ -16,6 +16,11 @@ committal in the CVS repository !
      ----------------------------------------------------------
      * Reverse chronological order (last date on top), please *
      ----------------------------------------------------------
+
+Aug 13, 02 M.Asai (tracking-V04-01-00)
+- G4TrackingManager.hh, G4TrackingManager.cc
+  o Re-implement EventAborted() method to ensure this command
+    properly works even at the stepping phase.
 
 Apr 25, 02 M.Asai (tracking-V04-00-05)
 - G4TrackingManager.cc
